# hdltools

./: .gitignore  .venv  LICENSE.md  Pipfile  README.md  _metadata.json  dev_requirements.txt  op_20260206_024535_108b0255.json  op_20260206_024535_22fc6c55.json  op_20260206_024535_2f0e163a.json  op_20260206_024535_30ff170a.json  op_20260206_024535_313b61ce.json  op_20260206_024535_35a3a23a.json  op_20260206_024535_49ebc207.json  op_20260206_024535_567ea48f.json  op_20260206_024535_589aaeee.json  op_20260206_024535_5eb4f96b.json  op_20260206_024535_5ed2d23a.json  op_20260206_024535_658fae06.json  op_20260206_024535_788d840a.json  op_20260206_024535_a97c6486.json  op_20260206_024535_be1b97e8.json  op_20260206_024535_c5dadafe.json  op_20260206_024535_ce3fc1b2.json  op_20260206_024535_d68b036e.json  op_20260206_024535_d7881589.json  op_20260206_024536_0038c082.json  op_20260206_024536_003f3401.json  op_20260206_024536_04cc8aec.json  op_20260206_024536_093b4443.json  op_20260206_024536_15ecb0e3.json  op_20260206_024536_1e15933d.json  op_20260206_024536_2e31c4da.json  op_20260206_024536_32f139a1.json  op_20260206_024536_38ad2e48.json  op_20260206_024536_427dc78c.json  op_20260206_024536_43d3c6bf.json  op_20260206_024536_46fbd9c2.json  op_20260206_024536_55430be5.json  op_20260206_024536_554a56ff.json  (+41 more)
assets/tests/: input1.vg  sample.mm  videochk.mmap
assets/verilog/: axi_slave.v  tb_template.v  test.v
hdldraw/: __init__.py  hdl.py  verilog.py
hdltools/: __init__.py  codegen.py  mmap.py  registers.py  template.py  util.py  verilog_gen.py
hdltools/abshdl/: __init__.py  assign.py  builtin.py  codegen.py  comment.py  concat.py  const.py  expr.py  fsm.py  generator.py  highlvl.py  ifelse.py  instance.py  interface.py  loop.py  macro.py  mmap.py  module.py  port.py  registers.py  scope.py  sens.py  seq.py  signal.py  stmt.py  switch.py  variable.py  vector.py
hdltools/binutils/: __init__.py  arch.py  decoder.py  function.py  instruction.py  objdump.tx  passes.py
hdltools/binutils/tools/: __init__.py  boundary.py
hdltools/codegen/: __init__.py
hdltools/docgen/: ghmd.py  markdown.py
hdltools/hdllib/: aximm.py  fsm.py  patterns.py  sim.py
hdltools/hdllib/axi/: __init__.py  interfaces.py  modules.py
hdltools/latex/: toplevel.py
hdltools/logging/: __init__.py
hdltools/mmap/: __init__.py  ast.py  builder.py  mmap.tx
hdltools/patterns/: __init__.py  matcher.py
hdltools/sim/: __init__.py  hdl.py  ports.py  primitives.py  simulation.py  state.py  util.py
hdltools/specc/: codegen.py
hdltools/tools/axi_slave_builder/: __init__.py
hdltools/tools/common/: __init__.py  mmap.py
hdltools/tools/fnboundary/: __init__.py
hdltools/tools/inputgen/: __init__.py
hdltools/tools/mmap_docgen/: __init__.py
hdltools/tools/vcdcmp/: __init__.py
hdltools/tools/vgc/: __init__.py
hdltools/vcd/: __init__.py  compare.py  compiler.py  conditions.py  dump.py  efficient_storage.py  event.py  generator.py  history.py  mixins.py  parser.py  pattern.py  streaming_parser.py  tokens.py  tracker.py  trigger.py  variable.py
hdltools/vecgen/: __init__.py  generate.py  inputcfg.py  inputgen.py  vecgrammar.tx
hdltools/verilog/: codegen.py  module_grammar.tx  parser.py
hdltools/vhdl/: __init__.py  codegen.py
tests/: test_all.py  test_cli_tools.py  test_docgen.py  test_functional_equivalence.py  test_hdl.py  test_highlvl.py  test_patt.py  test_patterns.py  test_simulation.py  test_tools.py  test_vcd.py  test_vcd_comparison_integration.py  test_vcd_edge_cases.py  test_vecgen.py  test_vhdl.py  test_vhdl_integration.py  test_vhdl_library_headers.py  test_vloggen.py  test_vparse.py  tests.py
tests/assets/: complex.vcd  example.vcd  real_numbers.vcd  test.v
tools/: axi_slave_builder  axi_slave_builder.py  fnboundary  inputgen  mmap_docgen  mmap_docgen.py  vcdevts  vcdhier  vcdtracker  vgc
usage/: fsm.py  hdllib_mod.py  hdllib_par.py  hdllib_seq.py  hdltools  joiner.py  manual.py  sim_stim.py  sim_tohdl.py  vcdhier.py  vcdtracker.py
(+22 files in other folders)
