[tool.poetry]
name = "hdltools"
version = "0.1.0"
description = ""
authors = ["Bruno <brunosmmm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
textX = "^4.2.2"
dictator = {git = "https://github.com/brunosmmm/dictator", rev = "master"}
colorama = ">=0.4.6"
astunparse = "^1.6.3"
scoff = {git = "https://github.com/brunosmmm/scoff", rev = "f544c6c5a20da130cd64f8365fc36e679fe92b33"}
rich = "^13.7.1"

[tool.poetry.scripts]
axi_slave_builder = "hdltools.tools.axi_slave_builder:main"
fnboundary = "hdltools.tools.fnboundary:main"
inputgen = "hdltools.tools.inputgen:main"
mmap_docgen = "hdltools.tools.mmap_docgen:main"
vcdevts = "hdltools.tools.vcdevts:main"
vcdhier = "hdltools.tools.vcdhier:main"
vcdtracker = "hdltools.tools.vcdtracker:main"
vgc = "hdltools.tools.vgc:main"
vcdcmp = "hdltools.tools.vcdcmp:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^5.5"
pytest-cov = "^2.11.1"
sphinx = ">=6.0,<8.0"
sphinx-rtd-theme = ">=1.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
